--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 /*container styling */
-.continer{
+.container{
     max-width: 600px;
     margin: 50px;
     background: #fff;
@@ -30,7 +30,7 @@ h1{
 }
 
 p{
-    margin: bottom 10px;
+    margin-bottom :10px;
 }
 
 /*i/p nd bttns*/
@@ -57,7 +57,7 @@ button{
     border-radius: 4px;
     cursor: pointer;
     transition:transform 0.2s, background-color 0.2s;/*added smooth hover and active effects */
-    
+
 }
 
 button:hover{
@@ -78,5 +78,5 @@ button:active{
 #output{
     font-weight: bold;
     color:#28a745;
-    margin: top 10px;
+    margin-top :10px;
 }
